openshift-manifests/bluegreen-php/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  generation: 5
  labels:
    app: bluegreen
  name: bluegreen
spec:
  replicas: 1
  selector:
    app: bluegreen
    deploymentconfig: bluegreen
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: bluegreen
        deploymentconfig: bluegreen
    spec:
      containers:
      - name: bluegreen
        image: bluegreen:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - bluegreen
      from:
        kind: ImageStreamTag
        name: bluegreen:latest
    type: ImageChange
