openshift-manifests/bluegreen-php/bluegreen-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
  name: bluegreen
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bluegreen
#    deploymentconfig: bluegreen
  sessionAffinity: None
  type: ClusterIP
